# pyside6-mcp

./: .mcp.json  README.md  pyproject.toml
.claude-plugin/: plugin.json
examples/: claude-mcp-config.json  cursor-mcp-config.json  test_app.py
pyside6_mcp/: __init__.py  __main__.py  bridge.py  server.py
skills/pyside6-mcp/: SKILL.md
tests/: conftest.py  test_bridge_pure.py  test_integration_ready.py  test_server_pure.py
