[project]
name = "pyside6-mcp"
version = "0.1.0"
description = "Playwright-style MCP server for PySide6 apps — inspect, control, and debug via Claude"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "pyside6", "qt", "debug", "gui", "claude"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/com55/pyside6-mcp"
Repository = "https://github.com/com55/pyside6-mcp"
Issues = "https://github.com/com55/pyside6-mcp/issues"

[project.optional-dependencies]
bridge = ["PySide6>=6.6"]

[project.scripts]
pyside6-mcp = "pyside6_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "PySide6>=6.6",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
markers = [
    "integration: end-to-end tests that launch a real PySide6 app",
]
addopts = "-ra"
